# Add the executable that will compare output files
add_executable(check_outputs comp_mods.f90 comp_tests.f90)

# Add all test subdirectories
add_subdirectory(arch4)
add_subdirectory(arn2)
add_subdirectory(arn2_big)
add_subdirectory(arno)
add_subdirectory(arno_bound)
add_subdirectory(aroh)
add_subdirectory(boh2)
add_subdirectory(c2hh2)
add_subdirectory(cahe)
add_subdirectory(ch2he)
add_subdirectory(ch3he)
add_subdirectory(ch3he_ccsdt)
add_subdirectory(ch3he_vib)
add_subdirectory(ch3i)
add_subdirectory(cnh2)
add_subdirectory(cph2)
add_subdirectory(h2ohe)
add_subdirectory(h2ohe_orig)
add_subdirectory(h2ohe_prsbr)
add_subdirectory(hco_trnprt)
add_subdirectory(hecn)
add_subdirectory(heco)
add_subdirectory(heohx)
add_subdirectory(nh3h2)
add_subdirectory(nh3h2_qma)
add_subdirectory(nhph2)
add_subdirectory(o3ph2)
add_subdirectory(ohh2_bausr)
add_subdirectory(ohh2_j1)
add_subdirectory(ohh2_j13)
add_subdirectory(stp1sg)
add_subdirectory(vfit)
add_subdirectory(BASTST)
add_subdirectory(HYPXSC)

